@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,18 +23,21 @@
 
 /**
  * @test
+ * @bug 8284161 8287008
  * @summary Basic test for com.sun.management.HotSpotDiagnosticMXBean.dumpThreads
- * @compile --enable-preview -source ${jdk.version} DumpThreads.java
- * @run testng/othervm --enable-preview DumpThreads
- * @run testng/othervm --enable-preview -Djdk.trackAllThreads DumpThreads
- * @run testng/othervm --enable-preview -Djdk.trackAllThreads=true DumpThreads
- * @run testng/othervm --enable-preview -Djdk.trackAllThreadds=false DumpThreads
+ * @enablePreview
+ * @library /test/lib
+ * @run junit/othervm DumpThreads
+ * @run junit/othervm -Djdk.trackAllThreads DumpThreads
+ * @run junit/othervm -Djdk.trackAllThreads=true DumpThreads
+ * @run junit/othervm -Djdk.trackAllThreadds=false DumpThreads
  */
 
 import java.lang.management.ManagementFactory;
 import java.nio.file.Files;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Path;
+import java.time.ZonedDateTime;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicReference;
@@ -42,11 +45,12 @@ import java.util.concurrent.locks.LockSupport;
 import java.util.stream.Stream;
 import com.sun.management.HotSpotDiagnosticMXBean;
 import com.sun.management.HotSpotDiagnosticMXBean.ThreadDumpFormat;
+import jdk.test.lib.threaddump.ThreadDump;
 
-import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class DumpThreads {
+class DumpThreads {
     private static final boolean TRACK_ALL_THREADS;
     static {
         String s = System.getProperty("jdk.trackAllThreads");
@@ -57,7 +61,7 @@ public class DumpThreads {
      * Thread dump in plain text format.
      */
     @Test
-    public void testPlainText() throws Exception {
+    void testPlainText() throws Exception {
         var mbean = ManagementFactory.getPlatformMXBean(HotSpotDiagnosticMXBean.class);
         Path file = genOutputPath("txt");
         try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
@@ -94,7 +98,7 @@ public class DumpThreads {
      * Thread dump in JSON format.
      */
     @Test
-    public void testJson() throws Exception {
+    void testJson() throws Exception {
         var mbean = ManagementFactory.getPlatformMXBean(HotSpotDiagnosticMXBean.class);
         Path file = genOutputPath("json");
         try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
@@ -103,21 +107,37 @@ public class DumpThreads {
                 mbean.dumpThreads(file.toString(), ThreadDumpFormat.JSON);
                 cat(file);
 
-                assertTrue(count(file, "threadDump") >= 1L);
-                assertTrue(count(file, "time") >= 1L);
-                assertTrue(count(file, "runtimeVersion") >= 1L);
-                assertTrue(count(file, "threadContainers") >= 1L);
-                assertTrue(count(file, "threads") >= 1L);
+                // parse the JSON text
+                String jsonText = Files.readString(file);
+                ThreadDump threadDump = ThreadDump.parse(jsonText);
 
-                // virtual thread should be found
-                assertTrue(isJsonPresent(file, vthread));
+                // test threadDump/processId
+                assertTrue(threadDump.processId() == ProcessHandle.current().pid());
 
-                // if the current thread is a platform thread then it should be included
+                // test threadDump/time can be parsed
+                ZonedDateTime.parse(threadDump.time());
+
+                // test threadDump/runtimeVersion
+                assertEquals(Runtime.version().toString(), threadDump.runtimeVersion());
+
+                // test root container
+                var rootContainer = threadDump.rootThreadContainer();
+                assertFalse(rootContainer.owner().isPresent());
+                assertFalse(rootContainer.parent().isPresent());
+
+                // if the current thread is a platform thread then it will be in root container
                 Thread currentThread = Thread.currentThread();
                 if (!currentThread.isVirtual() || TRACK_ALL_THREADS) {
-                    assertTrue(isJsonPresent(file, currentThread));
+                    rootContainer.findThread(currentThread.threadId()).orElseThrow();
                 }
 
+                // find the thread container for the executor. The name of this executor
+                // is its String representaiton in this case.
+                String name = executor.toString();
+                var container = threadDump.findThreadContainer(name).orElseThrow();
+                assertFalse(container.owner().isPresent());
+                assertTrue(container.parent().get() == rootContainer);
+                container.findThread(vthread.threadId()).orElseThrow();
             } finally {
                 LockSupport.unpark(vthread);
             }
@@ -130,7 +150,7 @@ public class DumpThreads {
      * Test that dumpThreads throws if the output file already exists.
      */
     @Test
-    public void testFileAlreadyExsists() throws Exception {
+    void testFileAlreadyExsists() throws Exception {
         var mbean = ManagementFactory.getPlatformMXBean(HotSpotDiagnosticMXBean.class);
         String file = Files.createFile(genOutputPath("txt")).toString();
         assertThrows(FileAlreadyExistsException.class,
@@ -143,7 +163,7 @@ public class DumpThreads {
      * Test that dumpThreads throws if the file path is relative.
      */
     @Test
-    public void testRelativePath() throws Exception {
+    void testRelativePath() throws Exception {
         var mbean = ManagementFactory.getPlatformMXBean(HotSpotDiagnosticMXBean.class);
         assertThrows(IllegalArgumentException.class,
                 () -> mbean.dumpThreads("threads.txt", ThreadDumpFormat.TEXT_PLAIN));
@@ -155,7 +175,7 @@ public class DumpThreads {
      * Test that dumpThreads throws with null parameters.
      */
     @Test
-    public void testNull() throws Exception {
+    void testNull() throws Exception {
         var mbean = ManagementFactory.getPlatformMXBean(HotSpotDiagnosticMXBean.class);
         assertThrows(NullPointerException.class,
                 () -> mbean.dumpThreads(null, ThreadDumpFormat.TEXT_PLAIN));
@@ -185,14 +205,6 @@ public class DumpThreads {
      */
     private static boolean isPresent(Path file, Thread thread) throws Exception {
         String expect = "#" + thread.threadId();
-        return count(file, expect) > 0;
-    }
-
-    /**
-     * Returns true if the file contains "tid": <tid>
-     */
-    private static boolean isJsonPresent(Path file, Thread thread) throws Exception {
-        String expect = "\"tid\": " + thread.threadId();
         return count(file, expect) > 0;
     }
 
