@@ -23,10 +23,11 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SequenceLayout;
 import java.lang.foreign.ValueLayout;
+
 import sun.misc.Unsafe;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -40,7 +41,6 @@ import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.invoke.VarHandle;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
@@ -51,21 +51,17 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
 import java.util.function.ToIntFunction;
 
-import static java.lang.foreign.MemoryLayout.PathElement.sequenceElement;
-import static java.lang.foreign.ValueLayout.JAVA_INT;
-
 @BenchmarkMode(Mode.AverageTime)
 @Warmup(iterations = 5, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @Fork(value = 3, jvmArgsAppend = "--enable-preview")
-public class ParallelSum {
+public class ParallelSum extends JavaLayouts {
 
     final static int CARRIER_SIZE = 4;
     final static int ALLOC_SIZE = CARRIER_SIZE * 1024 * 1024 * 256;
     final static int ELEM_SIZE = ALLOC_SIZE / CARRIER_SIZE;
-    static final VarHandle VH_int = JAVA_INT.arrayElementVarHandle();
 
     final static MemoryLayout ELEM_LAYOUT = ValueLayout.JAVA_INT;
     final static int BULK_FACTOR = 512;
@@ -73,6 +69,7 @@ public class ParallelSum {
 
     static final Unsafe unsafe = Utils.unsafe;
 
+    Arena arena;
     MemorySegment segment;
     long address;
 
@@ -82,23 +79,24 @@ public class ParallelSum {
         for (int i = 0; i < ELEM_SIZE; i++) {
             unsafe.putInt(address + (i * CARRIER_SIZE), i);
         }
-        segment = MemorySegment.allocateNative(ALLOC_SIZE, CARRIER_SIZE, MemorySession.openShared());
+        arena = Arena.openShared();
+        segment = MemorySegment.allocateNative(ALLOC_SIZE, CARRIER_SIZE, arena.scope());
         for (int i = 0; i < ELEM_SIZE; i++) {
-            VH_int.set(segment, (long) i, i);
+            VH_INT.set(segment, (long) i, i);
         }
     }
 
     @TearDown
     public void tearDown() throws Throwable {
         unsafe.freeMemory(address);
-        segment.session().close();
+        arena.close();
     }
 
     @Benchmark
     public int segment_serial() {
         int res = 0;
         for (int i = 0; i < ELEM_SIZE; i++) {
-            res += (int)VH_int.get(segment, (long) i);
+            res += (int)VH_INT.get(segment, (long) i);
         }
         return res;
     }
@@ -133,12 +131,12 @@ public class ParallelSum {
     }
 
     final static ToIntFunction<MemorySegment> SEGMENT_TO_INT = slice ->
-            (int) VH_int.get(slice, 0L);
+            (int) VH_INT.get(slice, 0L);
 
     final static ToIntFunction<MemorySegment> SEGMENT_TO_INT_BULK = slice -> {
         int res = 0;
         for (int i = 0; i < BULK_FACTOR ; i++) {
-            res += (int)VH_int.get(slice, (long) i);
+            res += (int)VH_INT.get(slice, (long) i);
         }
         return res;
     };
@@ -172,11 +170,11 @@ public class ParallelSum {
     }
 
     final static Predicate<MemorySegment> FIND_SINGLE = slice ->
-            (int)VH_int.get(slice, 0L) == (ELEM_SIZE - 1);
+            (int)VH_INT.get(slice, 0L) == (ELEM_SIZE - 1);
 
     final static Predicate<MemorySegment> FIND_BULK = slice -> {
         for (int i = 0; i < BULK_FACTOR ; i++) {
-            if ((int)VH_int.get(slice, (long)i) == (ELEM_SIZE - 1)) {
+            if ((int)VH_INT.get(slice, (long)i) == (ELEM_SIZE - 1)) {
                 return true;
             }
         }
